--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
  <meta charset="utf-8">
  <title>アクションゲーム</title>
+ <link href="style.css" rel="stylesheet">
 </head>
 <body>
  <p id="player">一</p>
