--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+ <div id="stage"></div>
  <p id="player">一</p>
  <script src="game.js"></script>
 </body>
