--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
- <meta charset="utf-8">
- <title>アクションゲーム</title>
- <link href="style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>アクションゲーム</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
- <div id="stage"></div>
- <p id="player">一</p>
- <script src="game.js"></script>
+    <div id="stage"></div>
+    <p id="player"></p>
+    <script src="game.js"></script>
 </body>
 </html>
